# rich_life

./: Makefile  README.md  ants-demo.tape  conftest.py  life-demo.tape  pyproject.toml
.github/workflows/: publish.yml
src/rich_life/: __init__.py  __main__.py
tests/: test_game_of_life.py
